loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: Int(0) does not take parameters
for(y<-0 (7*4)-1){
         ^